--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">LOGO</a>
+    <a class="navbar-brand" href="#">gehad</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#logo" aria-controls="logo" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
